cmake_minimum_required(VERSION 2.8.12.2)
enable_testing()
project(radioacek)
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
add_subdirectory(src)
find_package(GTest QUIET)
if (GTest_FOUND)
    add_subdirectory(test)
else()
    message(WARNING "GTest not found - skipping building tests")
endif ()
